--- a/Css/main.less
+++ b/Css/main.less
@@ -1,7 +1,11 @@
 @import "variables";
+@import "utils";
 @import "imageEnvelope";
 @import "albumOverlay";
 @import "pageOverlay";
+
+@import "album_thtml";
+
 
 body, html {
 	margin: 0;
@@ -253,7 +257,7 @@ button {
 	}
 
 	.home-jara-show {
-		.animate(1300ms);
+		.Animate(1300ms);
 		top: -40px;
 	}
 	.home-jara-show-active {
@@ -296,7 +300,7 @@ button {
 		}
 	}
 	.homeimage img, .home_main img {
-		.animate(1200ms);
+		.Animate(1200ms);
 	}
 
 	.homeimage a:hover img, .home_main a:hover img {
@@ -368,30 +372,6 @@ button {
 
 }
 
-.gdata-album-list {
-	padding: 10px;
-	padding-left: 0px;
-	.album-name {
-		margin-top: -20px;
-		position: relative;
-		z-index: 20;
-		padding: 10px;
-		.content {
-			.text-overflow-elipsies;
-
-		}
-	}
-	.album-image {
-		position: relative;
-		z-index: 10;
-		max-height:100%;
-	}
-	.album-image-wrap {
-		overflow: hidden;
-		background-color: #f6f6f6;
-		cursor: pointer;
-	}
-}
 
 .template-p {
 	//display:table;
@@ -429,7 +409,7 @@ button {
 			}
 			a {
 				display: inline-block;
-				.animate(1500ms);
+				.Animate(1500ms);
 				padding-left: 1em;
 				color: #ccc;
 				text-decoration: none;
@@ -460,21 +440,9 @@ button {
 	}
 }
 
-.animate-easing(@duration, @ease) {
-	-webkit-transition: all @ease @duration;
-	-moz-transition: all @ease @duration;
-	-ms-transition: all @ease @duration;
-	-o-transition: all @ease @duration;
-	transition: all @ease @duration;
-}
-
-.animate(@duration) {
-	@ease: cubic-bezier(0.075, 0.820, 0.165, 1.000);
-	.animate-easing(@duration, @ease);
-}
 
 .view-enter {
-	.animate-easing(400ms, linear);
+	.AnimateEasing(400ms, linear);
 }
 
 .view-enter {
@@ -521,9 +489,9 @@ button {
 		width: 100%;
 		height: 100%;
 		background-color: black;
-		opacity: .8; /* Sets opacity so it's partly transparent */
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; /* IE transparency */
-		filter: alpha(opacity=80); /* More IE transparency */
+		opacity: .9; /* Sets opacity so it's partly transparent */
+		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)"; /* IE transparency */
+		filter: alpha(opacity=90); /* More IE transparency */
 		z-index: 40001;
 	}
 	.vertical-offset {
@@ -549,6 +517,10 @@ button {
 		.full-height-content {
 			height: 100%;
 		}
+	}
+
+	.preview-previous {
+		padding-right: 30px;
 	}
 
 }
@@ -670,13 +642,13 @@ button {
 
 .gridelement-content {
 	min-height: 20em;
-	.animate(1000ms);
+	.Animate(1000ms);
 }
 
 .kontakt {
 	padding: 10px;
 
-	.animate(1500ms);
+	.Animate(1500ms);
 	p {
 		margin: 0px;
 		padding: 0px
@@ -692,7 +664,7 @@ button {
 		text-decoration: none;
 		text-align: center;
 		.icon {
-			.animate(1500ms);
+			.Animate(1500ms);
 		}
 	}
 	a:hover {
@@ -705,7 +677,7 @@ button {
 
 .footer.dalsi {
 	.icon-button {
-		.animate(500ms);
+		.Animate(500ms);
 	}
 	h1 {
 		overflow: hidden;
@@ -724,7 +696,7 @@ button {
 
 	}
 	.dalsi-text-show {
-		.animate(1000ms);
+		.Animate(1000ms);
 		top: -40px;
 
 	}
@@ -733,7 +705,7 @@ button {
 	}
 	.dalsi-text-hide {
 		top: -40px;
-		.animate(500ms);
+		.Animate(500ms);
 	}
 
 }
@@ -759,7 +731,7 @@ button {
 
 /**animate */
 .fade-in {
-	.animate-easing(500ms, linear);
+	.AnimateEasing(500ms, linear);
 	opacity: 0;
 }
 
@@ -768,22 +740,16 @@ button {
 }
 
 .fade-out, fade-out-linear {
-	.animate(500ms);
+	.Animate(500ms);
 }
 
 .fade-out-active {
 	opacity: 0;
 }
 
-.text-overflow-elipsies {
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
-
-}
 
 .container_12.maincontent {
-	width: 960px;
+	width: 90%;
 
 	.main-logo {
 		padding-top: 60px;
