--- a/Css/album_thtml.less
+++ b/Css/album_thtml.less
@@ -1,4 +1,4 @@
-@import "utils";
+@import "src/utils";
 
 .gdata-album-list {
 	padding: 10px;
@@ -29,10 +29,9 @@
 	}
 	.album-image-wrap {
 		overflow: hidden;
-		background:	radial-gradient(#ff0000 1%, transparent 9%) 0 0, radial-gradient(#000000 0%, transparent 6%) 8px 8px, radial-gradient(rgba(255, 255, 255, 0.1) 0%, transparent 0%) 0 1px, radial-gradient(rgba(255, 255, 255, 0.1) -31%, transparent 20%) 8px 9px;
+		background:	radial-gradient(#A5A5A5 1%, transparent 9%) 0 0, radial-gradient(#000000 0%, transparent 6%) 8px 8px, radial-gradient(rgba(255, 255, 255, 0.1) 0%, transparent 0%) 0 1px, radial-gradient(rgba(255, 255, 255, 0.1) -31%, transparent 20%) 8px 9px;
 		background-size:16px 16px;
 		background-color: #f6f6f6;
 		cursor: pointer;
-
 	}
 }
